--- a/style.css
+++ b/style.css
@@ -125,12 +125,13 @@ input{
     margin: 0;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    max-width: 10px;
 }
 .bottom_images{
     margin-top: 0;
     margin-right: 20px;
     margin-bottom: 20px;
-    width: 30vw;
+    width: 345px;
     border-radius: 4px;
 }
 
@@ -138,6 +139,7 @@ input{
 
 
 body {
+    overflow-x: hidden;
     font-family: 'Noto Sans KR', sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -145,7 +147,7 @@ body {
     
     background-image: url('image/1920x600_01.jpg'); /* 배경 이미지 경로 */
     background-size: 100% auto; /* 이미지가 전체 페이지를 커버하도록 조절 */
-    background-position: absolute; /* 이미지 중심이 페이지 중심과 일치하도록 조절 */
+    /* background-position: absolute; 이미지 중심이 페이지 중심과 일치하도록 조절 */
     background-repeat: no-repeat; /* 이미지 반복 없음 */
     position: relative;
     background-color: rgb(27, 27, 27);
@@ -194,6 +196,14 @@ body::before{
         
     } */
     }
+    body::before{
+        width: 100%;
+
+    }
+    body::after{
+        width: 100%;
+
+    }
 }
 @media (min-width: 1150px){
     .bottom_images{
@@ -206,16 +216,49 @@ body::before{
         padding-top: 115px;
     }
 }
+@media (max-width: 1150px){
+    #bottom_images{
+        margin: 0;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
 @media (max-width: 1920px) {
     body {
-        background-size: auto 600px; 
-
-        font-size: auto
+        background-size: auto 600px;
     /* }
     body::before{
         height : 100vh;
         
     } */
+    }
+}
+@media (max-width: 600px) {
+
+    h1{
+        font-size: 16px;
+    }
+    h2{
+        font-size: 50px;
+    }
+    h3{
+        font-size: 12px;
+    }
+    .bottom_images{
+        width: 80vw;
+        height: auto;
+    }
+    #bottom_images{
+        margin: 0;
+        display:grid;
+        grid-template-columns: 1fr;
+        
+    }
+    /* body{
+        background-size: cover;
+    } */
+    #grid{
+        width:100%;
     }
 }
 
