--- a/style.css
+++ b/style.css
@@ -144,13 +144,13 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     margin: 0px;
-    
-    background-image: url('image/1920x600_01.jpg'); /* 배경 이미지 경로 */
     background-size: 100% auto; /* 이미지가 전체 페이지를 커버하도록 조절 */
+    background-image: url('image/1920x600_00.jpg');
     /* background-position: absolute; 이미지 중심이 페이지 중심과 일치하도록 조절 */
     background-repeat: no-repeat; /* 이미지 반복 없음 */
     position: relative;
     background-color: rgb(27, 27, 27);
+    z-index: -10;
 }
 body::before{
     content: "";
@@ -164,7 +164,7 @@ body::before{
         rgba(27, 27, 27, 0),
         rgba(27, 27, 27, 1)
     );
-    z-index: -1;
+    z-index: -19;
 }body::after{
     content: "";
     position: absolute;
@@ -177,7 +177,7 @@ body::before{
         rgba(27, 27, 27, 1),
         rgba(27, 27, 27, 1)
     );
-    z-index: -1;
+    z-index: -9;
 }
 
 
@@ -262,3 +262,103 @@ body::before{
     }
 }
 
+
+/* 팝업 */
+#popup {
+    display: none; /* 기본적으로 팝업을 숨깁니다 */
+    position: fixed; /* 페이지를 스크롤해도 항상 같은 위치에 팝업이 표시되도록 설정 */
+    left: 50%; /* 가로 중앙에 위치 */
+    top: 50%; /* 세로 중앙에 위치 */
+    transform: translate(-50%, -50%); /* 정확한 중앙 위치를 위한 조정 */
+    background-image: url('image/1정수와유리수.jpg');
+    background-size: 800px;
+    background-position-x: center;
+    color: #ffffff;
+    padding: 20px; /* 패딩 설정 */
+    /* border: 1px solid #ddd; 테두리 설정 */
+    border-radius: 10px;
+    z-index: 1; /* 다른 요소들 위에 표시되도록 z-index 설정 */
+    width: 800px; /* 팝업의 너비 설정 */
+    height: 95vh;
+    /* max-width: 500px; 팝업의 최대 너비 설정 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 팝업에 그림자 효과 추가 */
+    
+}
+#popup *{
+    z-index: 1;
+}
+#popup::before {
+    content: "";
+    position: absolute;
+    top: 450px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(27, 27, 27);
+    z-index: -5;
+}
+#popup::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 451px;
+    background: linear-gradient(
+        to bottom,
+        rgba(27, 27, 27, 0),
+        rgba(27, 27, 27, 1)
+    );
+    z-index: -5;
+}
+#popup::before, #popup::after {
+    pointer-events: none;
+}
+#popup .button_container{
+    display: flex;
+    justify-content: flex-end;
+}
+#popup button {
+    /* display: inline-block; */
+    border: 2px solid #0032ff;
+    background-color: rgba(27, 27, 27, 0);
+    color: #0032ff;
+    font-weight: 700;
+    padding: 5px 20px;
+    margin-top: 0px;
+    /* border: none; */
+    border-radius: 20px;
+    cursor: pointer; /* 마우스를 버튼 위에 올렸을 때 커서 모양 변경 */
+    z-index: 2000;
+}
+#popupTitle{
+    margin-bottom: 15px;
+    padding: 0;
+    line-height: 175%;
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: 400;
+}
+#popupContent{
+    margin-left: 20px;
+    margin-top: 0;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 175%;
+}
+
+.div4{
+    display: grid;
+    height: 450px;
+}
+
+#popup button:hover {
+    background-color: rgb(0, 50, 255); /* 버튼에 마우스를 올렸을 때 배경색 변경 */
+}
+
+
+@media (max-width: 800px) {
+    #popup{
+        width: 90vw;
+    }
+}
